# DataAbstraction-containmentCheck

./: README.md
.github/workflows/: build.yml
config/: gatorgrader.yml
containmentcheck/: .flake8  pyproject.toml
containmentcheck/containmentcheck/: main.py
writing/: reflection.md
